# genre_classification_in_rust

./: !test.txt  !train.txt  Arrangement.html  Cargo.toml  README.md  idf.pickle  labels_ordered.pickle  labels_test.pickle  labels_test.txt  labels_train.txt  minimatrix.pickle  vocab.pickle
src/: args.rs  classifier.rs  eval.rs  evaluation.rs  main.rs  model.rs  preprocessing.rs  save.rs  text.rs
test/: A Study in Depravity.html  Abandon_all_hope.html  All Tied Up.html  All_You_Need_is_Love.html  Animal.html  Baseball_Season.html  Beer_Spaghetti_and_Pharmaceuticals.html  Bi_the_Way_Honest_Relationships.html  Braids.html  Burn This Out.html  Cross_My_Path.html  Des_Nuits_DAmour_a_Plus_Finir.html  Do you remember Summer 09.html  Good_Fences.html  He Hates Me.html  Netheia.html  Newsflash.html  Old House.html  Olivebranch.html  Phuket.html  Pretty as a flower.html  Rapture.html  Read_to_Me.html  Realm of the Stars Volume.html  Relief_of_the_guard.html  Rewriting Seven Years.html  Roasting_In_the_Oven_of_War.html  Rudi_and_Harry.html  Sakura_Sakura.html  Say_My_Name_Flower.html  Secrets Facilitated.html  Shape.html  Shes_coming_up_my_stairs.html  Solo.html  Sophie Kardos Assassin Slayer.html  Starfinder.html  Steven Needs SexEd.html  Strange_Alloys.html  Sunny Hospital.html  Symbolism.html  (+55 more)
train/: 667_Children_of_the_Beast.html  A Day in the Life.html  A Final Warning.html  A Time for Everything.html  A_Dark_Alley_and_a_Bad_Idea.html  A_Lon_Beginning.html  A_Mermaids_Kiss.html  A_Self_Fulfilling_Prophecy.html  Abduction.html  Adrift.html  After_Every_Happy.html  (+370 more)
