[package]
name = "genre_classification_in_rust"
version = "0.1.0"
authors = ["Marko Lozajic <marko.lozajic@student.uni-tuebingen.de>, Anna Soboleva <anna.soboleva@student.uni-tuebingen.de>"]

[dependencies]
clap = "2"
lazy_static="1.1"
ndarray = "0.11"
ndarray-linalg = { version = "0.8", features = ["openblas"] }
ngrams = "1.0"
ordered-float = "0.5"
rusty-machine = "0.5"
scanlex = "0.1"
select = "0.4"
serde = "1.0"
serde-pickle = "0.4"
stopwords = "0.1"
time = "0.1"
zip = "0.4"
